--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title><%= title %></title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  {% block main %}
-  {% endblock %}
+  <div id="root"></div>
 </body>
 </html>
