finished a simple materialize sample

--- a/frontend/src/sass/base.scss
+++ b/frontend/src/sass/base.scss
@@ -12,8 +12,10 @@
 // Components
 @import "materialize/global";
 @import "materialize/buttons";
+@import "materialize/carousel";
 @import "materialize/grid";
 @import "materialize/icons-material-design";
+@import "materialize/materialbox";
 @import "materialize/navbar";
 @import "materialize/typography";
 @import "materialize/waves";
