--- a/frontend/src/sass/custom.scss
+++ b/frontend/src/sass/custom.scss
@@ -1,13 +1,57 @@
+// H1 style
 h1 {
   color: $primary-color;
   text-align: center;
 }
 
-img.re-zero {
-  width: 50%;
-  content: url("../image/hello_world.png");
+// Active nvlink color
+.active {
+  color: yellow;
 }
 
-.active {
-  color: orange;
+// Images
+img {
+  &.re-zero {
+    max-width: 50%;
+    height: auto;
+    content: url("../image/rezero.png");
+  }
+}
+
+.block {
+  height: 100vh;
+}
+
+.img-wrapper {
+  margin: 10px auto;
+  height: 100%;
+  border: black solid 1px;
+}
+
+.carousel.carousel-slider {
+  height: 80%;
+}
+
+.parallax-header {
+  color: $primary-color;
+  font-weight: 300;
+}
+
+// Container
+.container {
+  max-width: 1280px;
+  height: 100%;
+}
+
+// Media
+@media only screen and (min-width: 601px) {
+  .container {
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 993px) {
+  .container {
+    width: 85%;
+  }
 }
