--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -5,8 +5,10 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="http://prismjs.com/themes/prism.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
+  <script src="http://prismjs.com/prism.js"></script>
 </body>
 </html>
