--- a/frontend/src/sass/materialize.scss
+++ b/frontend/src/sass/materialize.scss
@@ -21,3 +21,4 @@
 @import "materialize/transitions";
 @import "materialize/typography";
 @import "materialize/waves";
+@import "materialize/forms/input-fields";
