--- a/frontend/src/sass/components/prismcode.scss
+++ b/frontend/src/sass/components/prismcode.scss
@@ -2,7 +2,7 @@
 code,
 pre {
   position: relative;
-  font-size: 1.1rem;
+  font-size: 1em;
 }
 
 pre[class*="language-"] {
@@ -20,7 +20,7 @@ pre[class*="language-"]::before {
   -webkit-font-smoothing: antialiased;
   color: #555;
   content: attr(class);
-  font-size: 0.9rem;
+  font-size: 0.9em;
   border: solid 1px rgba(51, 51, 51, 0.12);
   border-top: none;
   border-left: none;
