added immutable.js support & added async server api call example, close #1

--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -14,6 +14,7 @@
 @import "components/pushpin";
 @import "components/navlink";
 @import "components/todoApp";
+@import "components/apiLoader";
 
 // Pages
 @import "pages/parallaxPage";
