--- a/frontend/src/sass/common.scss
+++ b/frontend/src/sass/common.scss
@@ -29,6 +29,16 @@ img {
   }
 }
 
+// App background
+.app-background {
+  position: relative;
+  max-width: 50%;
+  height: auto;
+  margin: 50px auto 10px;
+  padding: 10px;
+  border: 1px #ccc solid;
+}
+
 // Container
 .container {
   max-width: 1280px;
