rewrite fetchApi.tsx, changed react-redux global state and fixed several typescript issues

--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-	<meta content="My boilerplate for express, webpack, react, redux and typescript" name="description">
+	<meta content="My full-stack boilerplate that using express with webpack, react and typescirpt! (hot module reload and materialize-css supported)" name="description">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
