--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta content="My full-stack boilerplate that using express with webpack, react and typescirpt! (hot module reload and materialize-css supported)" name="description">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <noscript>JavaScript is off. Please enable to view full site.</noscript>
 </head>
 <body>
   <div id="root"></div>
