added new favicon

--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -3,12 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-	<meta content="My full-stack boilerplate that using express with webpack, react and typescirpt! (hot module reload and materialize-css supported)" name="description">
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <noscript>JavaScript is off. Please enable to view full site.</noscript>
 </head>
 <body>
   <div id="root"></div>
+  <!--
+    This HTML file is a template.
+    If you open it directly in the browser, you will see an empty page.
+
+    You can add webfonts, meta tags, or analytics to this file.
+    The build step will place the bundled scripts into the <body> tag.
+
+    To begin the development, run `yarn run-dev`.
+    To run in production mode, use `yarn run-prod`.
+  -->
 </body>
 </html>
