Feature(redux): add support for redux v4.0.0

--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -16,8 +16,8 @@
     You can add webfonts, meta tags, or analytics to this file.
     The build step will place the bundled scripts into the <body> tag.
 
-    To begin the development, run `yarn run-dev`.
-    To run in production mode, use `yarn run-prod`.
+    To begin the development, run `yarn dev`.
+    To run in production mode, use `yarn prod`.
   -->
 </body>
 </html>
