Feature: add various new features and improve project structure, please see below list for detail
- add RESTful API support
- add webpack-dev-server support
- use react-saga instead of react-thunk
- use google hosted material-design-icons
- update all types and interfaces
- append 'Container' suffix to all containers file
- use react-devtools Chrome extension
- remove skipped backend tests
- move all react component styles to sass file style
- update sass files for better mobile display
- add random 404 page images
- fix webpack config file sourceMap and image-webpack-loader issue
- update dependencies
- update README.md

--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -1,21 +1,22 @@
 @charset "UTF-8";
 
-// materialize
+// Materialize
 @import "materialize";
 
-// Common
-@import "common";
+// Global
+@import "global";
 
 // Components
 @import "components/carousel";
-@import "components/header";
 @import "components/footer";
-@import "components/prismcode";
+@import "components/header";
+@import "components/fetchNote";
+@import "components/prismCodes";
 @import "components/pushpin";
-@import "components/navlink";
-@import "components/todoApp";
-@import "components/apiLoader";
+@import "components/todo";
+@import "components/todoLayout";
 
 // Pages
+@import "pages/notFoundPage";
 @import "pages/parallaxPage";
 @import "pages/reactPage";
