--- a/frontend/src/sass/materialize.scss
+++ b/frontend/src/sass/materialize.scss
@@ -8,18 +8,19 @@
 // Reset
 @import "~materialize-css/sass/components/normalize";
 
-// Components
+// Import components we need here
 @import "~materialize-css/sass/components/global";
 @import "~materialize-css/sass/components/buttons";
 @import "~materialize-css/sass/components/carousel";
+@import "~materialize-css/sass/components/cards";
 @import "~materialize-css/sass/components/dropdown";
 @import "~materialize-css/sass/components/grid";
 @import "~materialize-css/sass/components/icons-material-design";
-@import "~materialize-css/sass/components/materialbox";
 @import "~materialize-css/sass/components/navbar";
+@import "~materialize-css/sass/components/sidenav";
 @import "~materialize-css/sass/components/toast";
 @import "~materialize-css/sass/components/tooltip";
 @import "~materialize-css/sass/components/transitions";
 @import "~materialize-css/sass/components/typography";
 @import "~materialize-css/sass/components/waves";
-@import "~materialize-css/sass/components/forms/input-fields";
+@import "~materialize-css/sass/components/forms/forms";
