--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <noscript>JavaScript is off. Please enable to view full site.</noscript>
 </head>
