Feature(robots): add robots.txt support

--- a/frontend/template/index.ejs
+++ b/frontend/template/index.ejs
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+  <meta content="Full-stack boilerplate that using express with webpack, react and typescirpt!" name="description">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <noscript>JavaScript is off. Please enable to view full site.</noscript>
 </head>
 <body>
+  <noscript>
+    For full functionality of this site it is necessary to enable JavaScript.
+    Here are the <a href="https://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript in your web browser</a>.
+  </noscript>
   <div id="root"></div>
   <!--
     This HTML file is a template.
