--- a/frontend/src/pages/ReactPage/components/TodoLayout/components/TodoFooter/components/TodoFilter/todoFilter.scss
+++ b/frontend/src/pages/ReactPage/components/TodoLayout/components/TodoFooter/components/TodoFilter/todoFilter.scss
@@ -7,7 +7,7 @@
   padding: 0;
 }
 
-@media only screen and (max-width: $small-screen-size) {
+@media only screen and (max-width: $small-screen) {
   .todo-filter-btn {
     display: block;
     width: 80%;
