--- a/frontend/public/index.ejs
+++ b/frontend/public/index.ejs
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta content="ie=edge" http-equiv="x-ua-compatible">
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-  <meta content="Full-stack boilerplate that using express with webpack, react and typescirpt!" name="description">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Full- stack boilerplate that using express with webpack, react and typescirpt!">
+  <meta name="theme-color" content="#2196f3">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <meta name="apple-mobile-web-app-title" content="Boilerplate">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon-167x167.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-startup-image" href="/apple-touch-startup-icon-1024x1024.png">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2196f3">
+  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
   <noscript>
