--- a/frontend/public/index.ejs
+++ b/frontend/public/index.ejs
@@ -45,7 +45,7 @@
     };
     (function (d) {
       var wf = d.createElement('script'), s = d.scripts[0];
-      wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js';
+      wf.src = 'https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js';
       wf.async = true;
       s.parentNode.insertBefore(wf, s);
     })(document);
